--- a/index.ipynb
+++ b/index.ipynb
@@ -411,7 +411,7 @@
     }
    ],
    "source": [
-    "for i in range(0, len(countries)):\n",
+    "for i in list(range(0, len(countries))):\n",
     "    print(cities[index]+\",\", countries[index])"
    ]
   },
