automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -427,29 +427,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
       "Tel Aviv, Israel\n",
-      "Tel Aviv, Israel\n",
-      "Tel Aviv, Israel\n",
-      "Tel Aviv, Israel\n",
-      "Tel Aviv, Israel\n",
-      "Tel Aviv, Israel\n",
-      "Tel Aviv, Israel\n",
-      "Tel Aviv, Israel\n",
-      "Tel Aviv, Israel\n"
+      "Mexico City, Mexico\n",
+      "Mexico City, Mexico\n"
      ]
     }
    ],
    "source": [
     "countries.append('Mexico')\n",
     "cities.append('Mexico City')\n",
-    "for indexd in list(range(0, len(countries))):\n",
+    "for index in list(range(0, len(countries))):\n",
     "    print(cities[index]+\",\", countries[index])"
    ]
   },
