--- a/index.ipynb
+++ b/index.ipynb
@@ -569,9 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Terrance Koar\n"
+     ]
+    }
+   ],
    "source": [
     "first_name = \"\"\n",
     "last_name = \"\"\n",
